--- a/src/components/add-item/add-item.styles.scss
+++ b/src/components/add-item/add-item.styles.scss
@@ -24,4 +24,10 @@
             box-shadow: 0px 0px 5px 5px #284E84;
         }
     }
+
+    .error-message{
+        color: red;
+        font-weight: 400;
+        font-size: 1em;
+    }
 }
