--- a/src/components/todo-item/todo-item.styles.scss
+++ b/src/components/todo-item/todo-item.styles.scss
@@ -4,21 +4,21 @@
     display: grid;
     grid-template-columns: 8fr 1fr;
 
-    input{
+    .todo-item-container{
+        padding: 1em;
         width: 100%;
         background-color: transparent;
         border-style: none;
         font-size: 1.2em;
-        font-weight: 500;
-
-        &:focus{
-            outline: none;
-        }
     }
 
     .delete-icon{
         cursor: pointer;
         padding: 1em;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
 
         &:hover{
             background-color: #3a3458;
