--- a/src/App.css
+++ b/src/App.css
@@ -14,9 +14,19 @@
 }
 
 .container{
-  width: 360px;
   display: flex;
   flex-direction: column;
   gap: 1em;
 }
 
+@media screen and (max-width: 480px){
+  .container{
+    width: 300px;
+  }
+}
+
+@media screen and (min-width: 480px){
+  .container{
+    width: 450px;
+  }
+}
